--- a/src/pages/CSS/Grid.css
+++ b/src/pages/CSS/Grid.css
@@ -1,61 +1,55 @@
-h1{
-  font-family: Satisfy;
-  font-size:50px;
-  text-align:center;
-  color:black;
-  padding:1%;
+#gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  gap: 1.5em;
 }
-#gallery{
-  -webkit-column-count:4;
-  -moz-column-count:4;
-  column-count:4;
-  
-  -webkit-column-gap:20px;
-  -moz-column-gap:20px;
-  column-gap:20px;
+@media (max-width: 1200px) {
+  #gallery {
+    -webkit-column-count: 3;
+    -moz-column-count: 3;
+    column-count: 3;
+
+    -webkit-column-gap: 20px;
+    -moz-column-gap: 20px;
+    column-gap: 20px;
+  }
 }
-@media (max-width:1200px){
-  #gallery{
-  -webkit-column-count:3;
-  -moz-column-count:3;
-  column-count:3;
-    
-  -webkit-column-gap:20px;
-  -moz-column-gap:20px;
-  column-gap:20px;
+@media (max-width: 800px) {
+  #gallery {
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
+
+    -webkit-column-gap: 20px;
+    -moz-column-gap: 20px;
+    column-gap: 20px;
+  }
 }
+@media (max-width: 600px) {
+  #gallery {
+    -webkit-column-count: 1;
+    -moz-column-count: 1;
+    column-count: 1;
+  }
 }
-@media (max-width:800px){
-  #gallery{
-  -webkit-column-count:2;
-  -moz-column-count:2;
-  column-count:2;
-    
-  -webkit-column-gap:20px;
-  -moz-column-gap:20px;
-  column-gap:20px;
-}
-}
-@media (max-width:600px){
-  #gallery{
-  -webkit-column-count:1;
-  -moz-column-count:1;
-  column-count:1;
-}  
-}
-#gallery img,#gallery video {
-  width:100%;
-  height:auto;
-  margin: 4% auto;
-  box-shadow:-3px 5px 15px #000;
+#gallery img,
+#gallery video {
+  width: 100%;
+  height: auto;
+  margin: 3% auto;
   cursor: pointer;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
 }
-.modal-img,.model-vid{
-  width:100%;
-  height:auto;
+.modal-img,
+.model-vid {
+  width: 100%;
+  height: auto;
 }
-.modal-body{
-  padding:0px;
+.modal-body {
+  padding: 0px;
+}
+
+.container-fluid {
+  padding: 1em;
 }
