--- a/src/CSS/SearchTab.css
+++ b/src/CSS/SearchTab.css
@@ -1,24 +1,64 @@
 .search-bar {
+  background-size: cover;
+  height: 80vh;
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 8rem;
-  margin-bottom: 2em;
+  flex-direction: column;
+  background-repeat: no-repeat;
+  background: url("../Image/MainImage.jpg");
+  background-size: 100% 50rem;
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
 }
-.container1 {
-  margin: 0 auto;
-  width: 100%;
-
-  height: auto;
-  max-width: 600px;
+.search-bar__header {
+  /* margin: 0 auto; */
+  /* position: absolute; */
+  /* top: 15%; */
+  /* left: 23.3%; */
+  width: fit-content;
+  display: flex;
+  margin-top: -5rem;
+  margin-bottom: 2rem;
+  flex-direction: column;
 }
-
+.search-bar__col {
+  display: flex;
+  flex-direction: column;
+}
+.search-bar__header > h1 {
+  font-size: 5rem;
+  color: #f1f1f1;
+  font-weight: bolder;
+}
+.search-bar__header > p {
+  color: white;
+  text-align: left;
+  font-weight: 400;
+  font-size: 1.8rem;
+}
+.search-bar__upload {
+  background-color: rgba(0, 48, 135, 0.9);
+  font-weight: 600;
+  padding: 0.9rem 1.8rem;
+  color: white;
+  font-size: 1rem;
+  display: block;
+  text-decoration: none;
+  margin-left: 0.8rem;
+  transition: all 0.3s ease;
+}
+.search-bar__row {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin: 10rem auto; */
+}
 .autocomplete-container {
   position: relative;
 }
 
 .autocomplete {
-  background-color: yellow;
   display: flex;
 }
 
@@ -28,20 +68,23 @@ button {
 }
 
 .autocomplete-input {
-  border: 1px solid rgba(0, 0, 0, 0.04);
   outline: none;
   border: none;
-  background-color: eee;
+  background-color: #f1f1f1;
+  /* background-color: #f7f7f7; */
   width: 100%;
-  width: 38rem;
-  padding: 0.8rem;
-
-  font-size: 16px;
-  line-height: 1.5;
+  width: 28rem;
+  padding: 0.9rem 1.8rem;
+  font-size: 1rem;
+  margin-left: -0.2rem;
+  /* line-height: 1.5; */
+  color: rgb(73, 73, 73);
   flex: 1;
+  border-radius: none;
+  border: 1px solid #f1f1f1;
 }
 .autocomplete-input:focus {
-  outline: 1px solid rgb(160, 217, 255);
+  /* outline: 1px solid rgb(160, 217, 255); */
 }
 
 .autocomplete-submit {
@@ -71,6 +114,8 @@ button {
   padding: 0;
   list-style: none;
   transition: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 .autocomplete-result {
