--- a/src/styles/layout/_base.scss
+++ b/src/styles/layout/_base.scss
@@ -52,7 +52,6 @@ body {
     opacity: 0;
     color: white;
     font-size: 2rem;
-    // z-index: 109;
     left: 40%;
     & > svg {
     }
@@ -64,8 +63,7 @@ body {
         opacity: 1;
       }
       & > img {
-        filter: brightness(20%);
-        opacity: 1;
+        box-shadow: inset 1rem 1rem 1rem 5rem rgba(0, 0, 0, 0.9);
       }
       // & > svg {
       //   display: flex;
