--- a/src/CSS/Grid.css
+++ b/src/CSS/Grid.css
@@ -1,19 +1,20 @@
 #gallery {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
   gap: 1.5em;
 }
+
 @media (max-width: 1200px) {
   #gallery {
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
-
+    -webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
     -webkit-column-gap: 20px;
     -moz-column-gap: 20px;
-    column-gap: 20px;
+    column-gap: 2rem;
   }
 }
+
 @media (max-width: 800px) {
   #gallery {
     -webkit-column-count: 2;
@@ -25,6 +26,7 @@
     column-gap: 20px;
   }
 }
+
 @media (max-width: 600px) {
   #gallery {
     -webkit-column-count: 1;
@@ -32,11 +34,9 @@
     column-count: 1;
   }
 }
-#gallery img,
-#gallery video {
+#gallery .lazyload-wrapper {
   width: 100%;
   height: auto;
-  margin: 3% auto;
   cursor: pointer;
   -webkit-transition: all 0.2s;
   transition: all 0.2s;
