--- a/src/styles/lib/_dropdown.scss
+++ b/src/styles/lib/_dropdown.scss
@@ -7,7 +7,7 @@
   width: 9rem;
   overflow: hidden;
   border: 1px solid #f1f1f1;
-  background-color: #e0e0e0;
+  background-color: #f3f0f0;
   box-sizing: border-box;
   color: #333;
   cursor: default;
