--- a/src/CSS/Grid.css
+++ b/src/CSS/Grid.css
@@ -1,55 +1,33 @@
-#gallery {
+.gallery {
+  margin-top: 1.5rem;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  gap: 1.5em;
+  grid-template-columns: repeat(auto-fit, minmax(380px, 1fr));
+  gap: 1em;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
-
-@media (max-width: 1200px) {
-  #gallery {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
-    -webkit-column-gap: 20px;
-    -moz-column-gap: 20px;
-    column-gap: 2rem;
-  }
+.gallery > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-
-@media (max-width: 800px) {
-  #gallery {
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
-    column-count: 2;
-
-    -webkit-column-gap: 20px;
-    -moz-column-gap: 20px;
-    column-gap: 20px;
-  }
-}
-
-@media (max-width: 600px) {
-  #gallery {
-    -webkit-column-count: 1;
-    -moz-column-count: 1;
-    column-count: 1;
-  }
-}
-#gallery .lazyload-wrapper {
+.gallery > div > img {
   width: 100%;
-  height: auto;
-  cursor: pointer;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-.modal-img,
-.model-vid {
-  width: 100%;
-  height: auto;
-}
-.modal-body {
-  padding: 0px;
+  height: 100%;
+  object-fit: cover;
 }
 
-.container-fluid {
-  padding: 1em;
+.illus {
+  border: 1.5px solid #ffd88e;
 }
+
+/* .horizontal {
+  grid-column: span 2;
+}
+.vertical {
+  grid-row: span 2;
+}
+.big {
+  grid-column: span 2;
+  grid-row: span 2;
+} */
