--- a/src/CSS/SearchTab.css
+++ b/src/CSS/SearchTab.css
@@ -1,24 +1,20 @@
 .search-bar {
   background-size: cover;
-  height: 80vh;
+  height: 85vh;
   position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
+  flex-direction: row;
   background-repeat: no-repeat;
   background: url("../Image/MainImage.jpg");
   background-size: 100% 50rem;
-  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.23);
 }
+
 .search-bar__header {
-  /* margin: 0 auto; */
-  /* position: absolute; */
-  /* top: 15%; */
-  /* left: 23.3%; */
   width: fit-content;
   display: flex;
-  margin-top: -5rem;
   margin-bottom: 2rem;
   flex-direction: column;
 }
@@ -27,7 +23,7 @@
   flex-direction: column;
 }
 .search-bar__header > h1 {
-  font-size: 5rem;
+  font-size: 4.5rem;
   color: #f1f1f1;
   font-weight: bolder;
 }
@@ -147,56 +143,3 @@ button {
   text-decoration: none;
   text-transform: capitalize;
 }
-
-/* @import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400");
-
-* {
-  box-sizing: border-box;
-  position: relative;
-  transition: all 0.3s ease;
-}
-
-html {
-  font-size: 16px;
-}
-
-body {
-  font-family: Open Sans, Verdana, sans-serif;
-  color: rgba(0, 0, 0, 0.87);
-  font-weight: 400;
-  line-height: 1.45;
-}
-
-body,
-header {
-  background: #fafafa;
-}
-
-h1 {
-  margin-bottom: 0.5em;
-  font-weight: inherit;
-  line-height: 1.2;
-  color: #1c5b72;
-  font-size: 2.618em;
-}
-
-p {
-  margin-bottom: 1.3em;
-  line-height: 1.618;
-}
-
-@media (min-width: 800px) {
-  h1 {
-    font-size: 4.236em;
-    font-weight: 300;
-  }
-
-  p {
-    font-size: 1.3em;
-  }
-}
-
-a {
-  color: black;
-  text-decoration: none;
-} */
