--- a/src/styles/layout/_base.scss
+++ b/src/styles/layout/_base.scss
@@ -26,59 +26,29 @@ body {
 .main-container {
   margin-top: 10rem;
 }
-.img-responsive {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  position: relative;
-  border: 3px solid #ffd88e;
-}
-.picture-container {
-  position: relative;
-  z-index: 3;
-  transition: all 0.5s ease;
-  &:hover {
+
+.gallery {
+  & > div {
+    position: relative;
     & > a {
-      background-color: rgb(37, 36, 36);
-      z-index: 99999999999999999999999999;
-      opacity: 1;
-      & > svg {
-        width: 1.45rem;
-        height: 1.45rem;
-        // box-shadow: inset 1em 2em 4em 30rem rgba(0, 0, 0, 0.8);
+      position: absolute;
+      z-index: 99999;
+      bottom: 20px;
+      right: 20px;
+      opacity: 0;
+      & > img {
+        width: 1.8rem;
+        object-fit: contain;
       }
     }
-  }
-  & > a {
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    bottom: 1.5rem;
-    opacity: 0;
-    color: white;
-    font-size: 2rem;
-    right: 2rem;
-    & > svg {
-      width: 1.45rem;
-      height: 1.45rem;
-    }
-  }
 
-  &:hover {
-    & > a {
-      & > svg {
+    &:hover {
+      & > a {
         opacity: 1;
       }
-      & > img {
-        background-color: rgba(0, 0, 0, 0.5);
-        // box-shadow: inset 0rem 0rem 0rem 1rem rgba(0, 0, 0, 0.9);
-      }
     }
   }
 }
-
 .load-more__btn {
   // margin-bottom: 6em;
   display: flex;
