--- a/src/styles/layout/_upload.scss
+++ b/src/styles/layout/_upload.scss
@@ -1,9 +1,14 @@
 .upload-page {
-  margin-top: 6rem;
-  height: 85vh;
-  padding-left: 5rem;
+  height: 100vh;
+  width: 100vw;
   display: flex;
-  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: url("../../Image/MainImage.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 50rem;
+  position: fixed;
+  z-index: -1;
 
   @media screen and (max-width: 500px) {
     padding-left: 2rem;
@@ -15,10 +20,23 @@
     display: flex;
     align-items: center;
   }
+
+  &__container {
+    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.09);
+    -webkit-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.09);
+    -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.09);
+    padding: 4em;
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 5em;
+  }
   &__title {
     font-size: 2.5rem;
-    color: rgb(44, 43, 43);
+    // color: rgb(44, 43, 43);
     margin-bottom: 4rem;
+    letter-spacing: 0.1rem;
+    text-transform: capitalize;
+    color: rgba(0, 48, 135, 0.9);
   }
 
   &__selects {
@@ -33,7 +51,7 @@
   }
   &__btn {
     width: fit-content;
-    margin-top: 1.5rem;
+    margin-top: 3.5rem;
     display: block;
     padding: 0.8rem 2.5rem;
     background-color: none;
@@ -67,21 +85,18 @@ input[type="file"] {
   display: none;
 }
 .custom-file-upload {
-  border: 1px solid #ccc;
+  border: 1px solid #f2f2f2;
   display: inline-block;
-  padding: 12px 12px;
+  padding: 15px 15px;
   cursor: pointer;
   display: flex;
   flex-direction: row;
-  // border-radius: 4px;
   align-items: center;
+
   & > span {
     margin-left: 0.5rem;
     font-weight: 600;
   }
-  // white-space: nowrap;
-  // overflow: hidden;
-  // text-overflow: ellipsis;
 }
 
 .upload-page__form-label {
@@ -89,22 +104,32 @@ input[type="file"] {
 }
 
 .search-page {
-  margin-top: 7rem;
+  // margin-top: 7rem;
   &__search-box {
+    background-color: yellow;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
-    width: 100%;
-    position: fixed;
-    top: 0;
+    width: 100vw;
+    // position: fixed;
+    justify-self: center;
+    flex-grow: 1;
     padding: 1rem 1rem;
-    z-index: 99;
-    height: 5rem;
+    // z-index: 99;
     background-color: white;
+    & > a {
+      justify-self: flex-start;
+      margin-right: 7rem;
+      & > img {
+        width: 8.5rem;
+        object-fit: contain;
+      }
+    }
   }
 
   &__center-container {
+    // height: 70vh;
+    // margin-top: 10rem;
     z-index: -1;
     border-top: 1px solid #f1f1f1;
   }
