--- a/src/CSS/SearchTab.css
+++ b/src/CSS/SearchTab.css
@@ -1,6 +1,5 @@
 .search-bar {
   background-size: cover;
-  height: 85vh;
   position: relative;
   display: flex;
   align-items: center;
@@ -8,7 +7,8 @@
   flex-direction: row;
   background-repeat: no-repeat;
   background: url("../Image/MainImage.jpg");
-  background-size: 100% 50rem;
+  background-size: 100%;
+  height: 82vh;
   box-shadow: inset 0 0 0 2000px rgba(0, 0, 0, 0.23);
 }
 
