--- a/src/styles/layout/_upload.scss
+++ b/src/styles/layout/_upload.scss
@@ -6,7 +6,7 @@
   justify-content: center;
   background: url("../../Image/MainImage.jpg");
   background-repeat: no-repeat;
-  background-size: 100% 50rem;
+  background-size: 100%;
   position: fixed;
   z-index: -1;
 
@@ -27,8 +27,10 @@
     -moz-box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.09);
     padding: 4em;
     background-color: white;
-    border-radius: 10px;
+    // border-radius: 10px;
     margin-top: 5em;
+    height: 25rem;
+    overflow-y: auto;
   }
   &__title {
     font-size: 2.5rem;
